Changelog
=========


1.1 (unreleased)
----------------

- Slow down on too many requests. [jone]


1.0 (2015-11-09)
----------------

- Initial implementation.
  [lgraf]